feat: add feature flag for vulcan-tracker.
