# swagger/swagger.yaml
@@ -73,7 +73,7 @@ definitions:
         - annotation/1
         - annotation/2
         items:
-          example: Illo et.
+          example: Ducimus sit odio tenetur consequatur.
           type: string
         type: array
     title: AssetAnnotationDeleteRequest
@@ -96,34 +96,6 @@ definitions:
     description: AssetCollection is the media type for an array of Asset (default
       view)
     example:
-    - alias: AnAlias
-      annotations:
-        annotation/1: value/1
-        annotation/2: value/2
-      classified_at: "2020-09-03T15:00:42.112975Z"
-      environmental_cvss: AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:H/A:H
-      id: a8720503-0284-45fd-9cf4-5bb6c500966f
-      identifier: vulcan.example.com
-      options: '{"timeout":60}'
-      rolfp: R:1/O:1/L:0/F:0/P:0+S:1
-      scannable: true
-      type:
-        id: 29f83d16-09c4-4be5-8cae-e232d41f388a
-        name: Hostname
-    - alias: AnAlias
-      annotations:
-        annotation/1: value/1
-        annotation/2: value/2
-      classified_at: "2020-09-03T15:00:42.112975Z"
-      environmental_cvss: AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:H/A:H
-      id: a8720503-0284-45fd-9cf4-5bb6c500966f
-      identifier: vulcan.example.com
-      options: '{"timeout":60}'
-      rolfp: R:1/O:1/L:0/F:0/P:0+S:1
-      scannable: true
-      type:
-        id: 29f83d16-09c4-4be5-8cae-e232d41f388a
-        name: Hostname
     - alias: AnAlias
       annotations:
         annotation/1: value/1
@@ -398,21 +370,6 @@ definitions:
       type:
         id: 29f83d16-09c4-4be5-8cae-e232d41f388a
         name: Hostname
-    - alias: AnAlias
-      classified_at: "2020-09-03T15:00:42.112975Z"
-      environmental_cvss: AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:H/A:H
-      id: a8720503-0284-45fd-9cf4-5bb6c500966f
-      identifier: vulcan.example.com
-      options: '{"timeout":60}'
-      rolfp: R:1/O:1/L:0/F:0/P:0+S:1
-      scannable: true
-      status:
-        code: 3944598920153519998
-        error: Quo placeat magni harum ea.
-        type: Voluptatum mollitia consequuntur dignissimos.
-      type:
-        id: 29f83d16-09c4-4be5-8cae-e232d41f388a
-        name: Hostname
     items:
       $ref: '#/definitions/Assetresponse'
     title: 'Mediatype identifier: assetresponse; type=collection; view=default'
@@ -521,7 +478,7 @@ definitions:
         - a14c7c65-66ab-4676-bcf6-0dea9719f5c6
         - 9f7a0c78-b752-4126-aa6d-0f286ada7b8f
         items:
-          example: Sit odio tenetur consequatur quibusdam.
+          example: Voluptate est.
           type: string
         type: array
     required:
@@ -884,22 +841,6 @@ definitions:
       status_previous: OPEN
       team_id: a9d33628-ddb0-467c-b482-474887097820
       user: user@adevinta.com
-    - created_at: "2021-03-27T00:26:43.211506Z"
-      finding_id: 3c7d7003-c53d-4ccc-80e7-f21da241b2d4
-      id: b0720503-0a84-43fd-9cf4-5bb6c500226f
-      notes: This finding is a false positive because...
-      status: FALSE_POSITIVE
-      status_previous: OPEN
-      team_id: a9d33628-ddb0-467c-b482-474887097820
-      user: user@adevinta.com
-    - created_at: "2021-03-27T00:26:43.211506Z"
-      finding_id: 3c7d7003-c53d-4ccc-80e7-f21da241b2d4
-      id: b0720503-0a84-43fd-9cf4-5bb6c500226f
-      notes: This finding is a false positive because...
-      status: FALSE_POSITIVE
-      status_previous: OPEN
-      team_id: a9d33628-ddb0-467c-b482-474887097820
-      user: user@adevinta.com
     items:
       $ref: '#/definitions/Finding_overwrite'
     title: 'Mediatype identifier: finding_overwrite; type=collection; view=default'
@@ -940,6 +881,122 @@ definitions:
     description: FindingCollection is the media type for an array of Finding (default
       view)
     example:
+    - affected_resource: ""
+      attachments:
+      - content_type: application/json
+        data: e30=
+        name: JSON string
+      - content_type: application/json
+        data: e30=
+        name: JSON string
+      - content_type: application/json
+        data: e30=
+        name: JSON string
+      current_exposure: 4631
+      details: ""
+      id: a8720503-0284-45fd-9cf4-5bb6c500966f
+      impact_details: ""
+      issue:
+        cwe_id: 358
+        description: This domain has at least one MX record
+        id: b0720503-0a84-43fd-9cf4-5bb6c500226f
+        labels:
+        - Web
+        - HTTP
+        recommendations:
+        - It is recommended to run DMARC
+        reference_links: []
+        summary: MX presence
+      resources:
+      - attributes:
+        - Hostname
+        - Port
+        name: Network Resources
+        resources:
+        - Hostname: test.example.com
+          Port: "443"
+      - attributes:
+        - Hostname
+        - Port
+        name: Network Resources
+        resources:
+        - Hostname: test.example.com
+          Port: "443"
+      score: 6.9
+      source:
+        component: vulcan-tls
+        id: f8129c7f-7abf-41ba-ab1f-c97090bb3db4
+        instance: b3320f03-1284-42fd-9cf4-5bb6c500966f
+        name: vulcan
+        options: '{"timeout":60}'
+        time: "2019-06-08 11:16:40"
+      status: OPEN
+      target:
+        id: f8129c7f-7abf-41ba-ab1f-c97090bb3db4
+        identifier: www.test.com
+        teams:
+        - a9d33628-ddb0-467c-b482-474887097820
+        - 9cb0bb2b-ca36-4877-acad-9dde23880595
+      total_exposure: 4631
+      url_tracker: https://jiraserver.example.com/browse/TEST-123
+    - affected_resource: ""
+      attachments:
+      - content_type: application/json
+        data: e30=
+        name: JSON string
+      - content_type: application/json
+        data: e30=
+        name: JSON string
+      - content_type: application/json
+        data: e30=
+        name: JSON string
+      current_exposure: 4631
+      details: ""
+      id: a8720503-0284-45fd-9cf4-5bb6c500966f
+      impact_details: ""
+      issue:
+        cwe_id: 358
+        description: This domain has at least one MX record
+        id: b0720503-0a84-43fd-9cf4-5bb6c500226f
+        labels:
+        - Web
+        - HTTP
+        recommendations:
+        - It is recommended to run DMARC
+        reference_links: []
+        summary: MX presence
+      resources:
+      - attributes:
+        - Hostname
+        - Port
+        name: Network Resources
+        resources:
+        - Hostname: test.example.com
+          Port: "443"
+      - attributes:
+        - Hostname
+        - Port
+        name: Network Resources
+        resources:
+        - Hostname: test.example.com
+          Port: "443"
+      score: 6.9
+      source:
+        component: vulcan-tls
+        id: f8129c7f-7abf-41ba-ab1f-c97090bb3db4
+        instance: b3320f03-1284-42fd-9cf4-5bb6c500966f
+        name: vulcan
+        options: '{"timeout":60}'
+        time: "2019-06-08 11:16:40"
+      status: OPEN
+      target:
+        id: f8129c7f-7abf-41ba-ab1f-c97090bb3db4
+        identifier: www.test.com
+        teams:
+        - a9d33628-ddb0-467c-b482-474887097820
+        - 9cb0bb2b-ca36-4877-acad-9dde23880595
+      total_exposure: 4631
+      url_tracker: https://jiraserver.example.com/browse/TEST-123
     - affected_resource: ""
       attachments:
       - content_type: application/json
@@ -1098,11 +1155,6 @@ definitions:
         resources_count: 28
         summary: Site Without HTTPS
         targets_count: 14
-      - issue_id: a8720503-0284-45fd-9cf4-5bb6c500966f
-        max_score: 6.9
-        resources_count: 28
-        summary: Site Without HTTPS
-        targets_count: 14
       pagination:
         limit: 0.04495248178158175
         more: false
@@ -1128,7 +1180,7 @@ definitions:
         - Web
         - HTTP
         items:
-          example: Repellat laboriosam repellat eum.
+          example: Perspiciatis quia sequi et sed.
           type: string
         type: array
     title: 'Mediatype identifier: findings_labels; view=default'
@@ -1137,6 +1189,64 @@ definitions:
     description: Findings list (default view)
     example:
       findings:
+      - affected_resource: ""
+        attachments:
+        - content_type: application/json
+          data: e30=
+          name: JSON string
+        - content_type: application/json
+          data: e30=
+          name: JSON string
+        - content_type: application/json
+          data: e30=
+          name: JSON string
+        current_exposure: 4631
+        details: ""
+        id: a8720503-0284-45fd-9cf4-5bb6c500966f
+        impact_details: ""
+        issue:
+          cwe_id: 358
+          description: This domain has at least one MX record
+          id: b0720503-0a84-43fd-9cf4-5bb6c500226f
+          labels:
+          - Web
+          - HTTP
+          recommendations:
+          - It is recommended to run DMARC
+          reference_links: []
+          summary: MX presence
+        resources:
+        - attributes:
+          - Hostname
+          - Port
+          name: Network Resources
+          resources:
+          - Hostname: test.example.com
+            Port: "443"
+        - attributes:
+          - Hostname
+          - Port
+          name: Network Resources
+          resources:
+          - Hostname: test.example.com
+            Port: "443"
+        score: 6.9
+        source:
+          component: vulcan-tls
+          id: f8129c7f-7abf-41ba-ab1f-c97090bb3db4
+          instance: b3320f03-1284-42fd-9cf4-5bb6c500966f
+          name: vulcan
+          options: '{"timeout":60}'
+          time: "2019-06-08 11:16:40"
+        status: OPEN
+        target:
+          id: f8129c7f-7abf-41ba-ab1f-c97090bb3db4
+          identifier: www.test.com
+          teams:
+          - a9d33628-ddb0-467c-b482-474887097820
+          - 9cb0bb2b-ca36-4877-acad-9dde23880595
+        total_exposure: 4631
+        url_tracker: https://jiraserver.example.com/browse/TEST-123
       - affected_resource: ""
         attachments:
         - content_type: application/json
@@ -1250,6 +1360,11 @@ definitions:
       issues_count: 2
       max_score: 6.9
       target_id: a8720503-0284-45fd-9cf4-5bb6c500966f
+    - findings_count: 5
+      identifier: vulcan.example.com
+      issues_count: 2
+      max_score: 6.9
+      target_id: a8720503-0284-45fd-9cf4-5bb6c500966f
     items:
       $ref: '#/definitions/Findings_target'
     title: 'Mediatype identifier: findings_target; type=collection; view=default'
@@ -1263,16 +1378,6 @@ definitions:
         offset: 0.9837483587621623
         total: 0.7345756811206027
       targets:
-      - findings_count: 5
-        identifier: vulcan.example.com
-        issues_count: 2
-        max_score: 6.9
-        target_id: a8720503-0284-45fd-9cf4-5bb6c500966f
-      - findings_count: 5
-        identifier: vulcan.example.com
-        issues_count: 2
-        max_score: 6.9
-        target_id: a8720503-0284-45fd-9cf4-5bb6c500966f
       - findings_count: 5
         identifier: vulcan.example.com
         issues_count: 2
@@ -1321,16 +1426,6 @@ definitions:
     description: GroupCollection is the media type for an array of Group (default
       view)
     example:
-    - assets_count: 1
-      description: All newly created assets are added to the Default group
-      id: f6360346-77a5-4f97-b919-331363b3af26
-      name: Default group
-      options: '{"timeout":60}'
-    - assets_count: 1
-      description: All newly created assets are added to the Default group
-      id: f6360346-77a5-4f97-b919-331363b3af26
-      name: Default group
-      options: '{"timeout":60}'
     - assets_count: 1
       description: All newly created assets are added to the Default group
       id: f6360346-77a5-4f97-b919-331363b3af26
@@ -1447,7 +1542,7 @@ definitions:
         - Web
         - HTTP
         items:
-          example: Velit quis.
+          example: Natus esse neque aliquid.
           type: string
         type: array
       recommendations:
@@ -1455,14 +1550,14 @@ definitions:
         example:
         - It is recommended to run DMARC
         items:
-          example: Omnis perferendis.
+          example: Rerum deleniti aut sed illo porro.
           type: string
         type: array
       reference_links:
         description: Documentation reference for the issue
         example: []
         items:
-          example: Natus esse neque aliquid.
+          example: Omnis perferendis.
           type: string
         type: array
       summary:
@@ -1652,33 +1747,6 @@ definitions:
       type:
         id: 29f83d16-09c4-4be5-8cae-e232d41f388a
         name: Hostname
-    - alias: AnAlias
-      annotations:
-        annotation/1: value/1
-        annotation/2: value/2
-      classified_at: "2020-09-03T15:00:42.112975Z"
-      environmental_cvss: AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:H/A:H
-      groups:
-      - description: All newly created assets are added to the Default group
-        id: f6360346-77a5-4f97-b919-331363b3af26
-        name: Default group
-        options: '{"timeout":60}'
-      - description: All newly created assets are added to the Default group
-        id: f6360346-77a5-4f97-b919-331363b3af26
-        name: Default group
-        options: '{"timeout":60}'
-      - description: All newly created assets are added to the Default group
-        id: f6360346-77a5-4f97-b919-331363b3af26
-        name: Default group
-        options: '{"timeout":60}'
-      id: a8720503-0284-45fd-9cf4-5bb6c500966f
-      identifier: vulcan.example.com
-      options: '{"timeout":60}'
-      rolfp: R:1/O:1/L:0/F:0/P:0+S:1
-      scannable: true
-      type:
-        id: 29f83d16-09c4-4be5-8cae-e232d41f388a
-        name: Hostname
     items:
       $ref: '#/definitions/Listassetentry'
     title: 'Mediatype identifier: listassetentry; type=collection; view=default'
@@ -1753,6 +1821,12 @@ definitions:
     description: PolicyCollection is the media type for an array of Policy (default
       view)
     example:
+    - id: af36818a-0f30-412c-9692-d37716075861
+      name: Sample Policy
+      settings_count: 12
+    - id: af36818a-0f30-412c-9692-d37716075861
+      name: Sample Policy
+      settings_count: 12
     - id: af36818a-0f30-412c-9692-d37716075861
       name: Sample Policy
       settings_count: 12
@@ -1839,12 +1913,6 @@ definitions:
     description: PolicysettingCollection is the media type for an array of Policysetting
       (default view)
     example:
-    - checktype_name: vulcan-tls
-      id: 5e51174d-3755-48b2-98bf-37e37cb07f6e
-      options: '{"timeout":60}'
-    - checktype_name: vulcan-tls
-      id: 5e51174d-3755-48b2-98bf-37e37cb07f6e
-      options: '{"timeout":60}'
     - checktype_name: vulcan-tls
       id: 5e51174d-3755-48b2-98bf-37e37cb07f6e
       options: '{"timeout":60}'
@@ -2155,7 +2223,7 @@ definitions:
         - john.doe@vulcan.example.com
         - jane.doe@vulcan.example.com
         items:
-          example: At ut.
+          example: Architecto sapiente voluptatum deserunt at ut ea.
           type: string
         type: array
     required:
@@ -2226,7 +2294,7 @@ definitions:
         - Hostname
         - Port
         items:
-          example: Quas voluptatum sit eos illum ipsum tempora.
+          example: Velit quis.
           type: string
         type: array
       name:
@@ -2241,7 +2309,7 @@ definitions:
         items:
           additionalProperties: true
           example:
-            Sed qui sint ratione perferendis cumque.: Totam ut perspiciatis.
+            Voluptatum sit eos illum.: Tempora nemo corrupti sed qui.
           type: object
         type: array
     title: 'Mediatype identifier: resource; view=default'
@@ -2331,6 +2399,80 @@ definitions:
   ScanCollection:
     description: ScanCollection is the media type for an array of Scan (default view)
     example:
+    - checks_count: 20
+      end_time: "2018-09-07T10:40:52Z"
+      id: 23e7034f-8180-4895-8e7f-73f2f7d90631
+      program:
+        autosend: false
+        disabled: false
+        global: true
+        id: 9a100645-e51a-4e71-8a4f-1e462ce9a40d
+        name: Every midnight
+        policy_groups:
+        - group:
+            assets_count: 1
+            description: All newly created assets are added to the Default group
+            id: f6360346-77a5-4f97-b919-331363b3af26
+            name: Default group
+            options: '{"timeout":60}'
+          policy:
+            id: af36818a-0f30-412c-9692-d37716075861
+            name: Sample Policy
+            settings_count: 12
+        - group:
+            assets_count: 1
+            description: All newly created assets are added to the Default group
+            id: f6360346-77a5-4f97-b919-331363b3af26
+            name: Default group
+            options: '{"timeout":60}'
+          policy:
+            id: af36818a-0f30-412c-9692-d37716075861
+            name: Sample Policy
+            settings_count: 12
+        schedule:
+          cron: 0 7 1 * *
+      progress: 1
+      requested_by: john.doe@vulcan.example.com
+      scheduled_time: "2018-09-07T10:40:52Z"
+      start_time: "2018-09-07T10:40:52Z"
+      status: FINISHED
+    - checks_count: 20
+      end_time: "2018-09-07T10:40:52Z"
+      id: 23e7034f-8180-4895-8e7f-73f2f7d90631
+      program:
+        autosend: false
+        disabled: false
+        global: true
+        id: 9a100645-e51a-4e71-8a4f-1e462ce9a40d
+        name: Every midnight
+        policy_groups:
+        - group:
+            assets_count: 1
+            description: All newly created assets are added to the Default group
+            id: f6360346-77a5-4f97-b919-331363b3af26
+            name: Default group
+            options: '{"timeout":60}'
+          policy:
+            id: af36818a-0f30-412c-9692-d37716075861
+            name: Sample Policy
+            settings_count: 12
+        - group:
+            assets_count: 1
+            description: All newly created assets are added to the Default group
+            id: f6360346-77a5-4f97-b919-331363b3af26
+            name: Default group
+            options: '{"timeout":60}'
+          policy:
+            id: af36818a-0f30-412c-9692-d37716075861
+            name: Sample Policy
+            settings_count: 12
+        schedule:
+          cron: 0 7 1 * *
+      progress: 1
+      requested_by: john.doe@vulcan.example.com
+      scheduled_time: "2018-09-07T10:40:52Z"
+      start_time: "2018-09-07T10:40:52Z"
+      status: FINISHED
     - checks_count: 20
       end_time: "2018-09-07T10:40:52Z"
       id: 23e7034f-8180-4895-8e7f-73f2f7d90631
@@ -2657,7 +2799,7 @@ definitions:
         - a9d33628-ddb0-467c-b482-474887097820
         - 9cb0bb2b-ca36-4877-acad-9dde23880595
         items:
-          example: Rerum deleniti aut sed illo porro.
+          example: Ratione perferendis.
           type: string
         type: array
     title: 'Mediatype identifier: target; view=default'
@@ -2816,6 +2958,16 @@ definitions:
         last_login: "2018-09-07T10:40:52Z"
         lastname: Doe
         observer: true
+    - role: owner
+      user:
+        active: true
+        admin: true
+        email: john.doe@vulcan.example.com
+        firstname: John
+        id: 967d9966-b561-4233-bd6f-cac603fd8320
+        last_login: "2018-09-07T10:40:52Z"
+        lastname: Doe
+        observer: true
     items:
       $ref: '#/definitions/Teammember'
     title: 'Mediatype identifier: teammember; type=collection; view=default'
@@ -2896,6 +3048,14 @@ definitions:
   UserCollection:
     description: UserCollection is the media type for an array of User (default view)
     example:
+    - active: true
+      admin: true
+      email: john.doe@vulcan.example.com
+      firstname: John
+      id: 967d9966-b561-4233-bd6f-cac603fd8320
+      last_login: "2018-09-07T10:40:52Z"
+      lastname: Doe
+      observer: true
     - active: true
       admin: true
       email: john.doe@vulcan.example.com
